Post preview not showing new images added - FIXED Post preview not showing map correctly - FIXED Force iOS style scroll bars on multiselect form inputs so they are noticeable on mobile - CHANGED Some settings for selecting font awesome icons are not showing all icons - FIXED Font awesome settings icons updated to 5.6.3 - UPDATED

--- a/assets/css/partials/_widget_images.scss
+++ b/assets/css/partials/_widget_images.scss
@@ -68,6 +68,10 @@
             padding-bottom: 20%;
           }
 
+          i.fa-search-plus{
+            font-size: 30px;
+          }
+
         }
         &:hover img{
           transform: scale(1.1);
